<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".productDetail001">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/productImg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alootikkilogo" />

    <TextView
        android:id="@+id/productName01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/product001Name"
        android:textColor="#333333"
        android:textSize="24sp"
        app:fontFamily="@font/acme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImg"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/product001Price"
        android:textColor="#3F9785"
        android:textSize="30sp"
        app:fontFamily="@font/acme"
        app:layout_constraintStart_toStartOf="@+id/productName01"
        app:layout_constraintTop_toBottomOf="@+id/productName01" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/product001Description"
        android:textSize="16sp"
        app:fontFamily="@font/acme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/price" />
<!--
    <TextView
        android:id="@+id/minOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Note : You have to make an order of at least 5 Burgers (Any Variety)"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:fontFamily="@font/acme"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-->
    <TextView
        android:id="@+id/quantityText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:padding="5sp"
        android:text="@string/qty"
        android:textAllCaps="false"
        android:textColor="#3F9785"
        android:textSize="30sp"
        app:fontFamily="@font/acme"
        app:layout_constraintBottom_toTopOf="@+id/buyBtn"
        app:layout_constraintStart_toStartOf="@+id/buyBtn" />


    <EditText
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#F8F4F4"
        android:hint="@string/quantity"
        android:inputType="number"
        android:padding="5sp"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/quantityText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantityText"
        app:layout_constraintTop_toTopOf="@id/quantityText"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_background"
        android:text="@string/buy_now"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>