<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".aboutUsDeveloper">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="0dp"
            android:background="@drawable/round_background"
            android:contentDescription="@string/name"

            android:visibility="gone"
            app:srcCompat="@drawable/devlogo" />

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:padding="5sp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="0dp"
            android:padding="10sp"
            android:text="@string/aboutMe"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/email"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:padding="5sp"
            android:text="@string/email_tag"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linkedIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/linkedIn"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:padding="5sp"
            android:text="@string/linkedIn_tag"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/instagram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/instagram"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:padding="5sp"
            android:text="@string/instagram_tag"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/test_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Button"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>